# AbstractFramework

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  MANIFEST.in  README.md  __init__.py  agent.html  assistant.html  code.html  core.html  flow.html  gateway.html  index.html  llms-full.txt  llms.txt  memory.html  memory_summary_2026-02-15_16-00-21_FR.txt  music.html  observer.html  proto-cubes.html  pyproject.toml  runtime.html  semantics.html  toto.py  vision.html  voice.html
.github/workflows/: ci.yml  release.yml
abstractframework/: __init__.py  cli.py  install_manifest.py
abstractinstallers/: README.md
abstractinstallers/abstractcore/: BUILDING.md  README.md  install.ps1  install.sh  installer.py  installer_gui.py  manifest.json
abstractinstallers/abstractframework-macos/: BUILDING.md  README.md  manifest.local.json
abstractinstallers/abstractframework-macos/src/: app.css  app.js  index.html
abstractinstallers/abstractframework-macos/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
abstractinstallers/abstractframework-macos/src-tauri/capabilities/: main.json
abstractinstallers/abstractframework-macos/src-tauri/src/: main.rs
abstractinstallers/tauri-init-template/src-tauri/: tauri.conf.json
abstractmusic/: README.md  pyproject.toml  pytest.ini
abstractmusic/src/abstractmusic/: __init__.py  artifacts.py
abstractmusic/src/abstractmusic/backends/: __init__.py  acestep_api.py
abstractmusic/src/abstractmusic/integrations/: __init__.py  abstractcore_plugin.py
abstractmusic/tests/: conftest.py  test_acestep_api_backend.py
agent/: llms-full.txt  llms.txt
assets/css/: main.css
assets/js/: main.js
assistant/: llms-full.txt  llms.txt
code/: llms-full.txt  llms.txt
core/: llms-full.txt  llms.txt
docs/: README.md  abstractagent.html  abstractassistant.html  abstractcode.html  abstractcore.html  abstractflow.html  abstractgateway.html  abstractmemory.html  abstractmusic.html  abstractobserver.html  abstractruntime.html  abstractsemantics.html  abstractvision.html  abstractvoice.html  api.md  architecture.md  configuration.md  faq.md  getting-started.md  glossary.md  install.md
docs/adr/: 0001-layered-architecture.md  0002-effect-system-design.md  0003-tool-system-architecture.md  0004-observability-strategy.md  0005-memory-architecture.md  0006-durable-tool-execution.md  0007-active-context-and-memory-provenance.md  0008-token-terminology.md  0009-connected-memory-recall-and-provenance.md  0010-runtime-owned-node-traces.md  0011-ledger-subscriptions-and-event-bridge.md  0012-portable-workflowartifact.md  0013-durable-run-controls-pause-resume-cancel.md  0014-runtime-authority-timeouts.md  0015-execution-targets-and-remote-tool-workers.md  0016-tool-calling-pipeline-and-responsibility-boundaries.md  0017-host-ui-events-and-durable-prompts.md  0018-durable-run-gateway-and-remote-host-control-plane.md  0019-testing-strategy-and-levels.md  001_music_as_capability_plugin_via_acestep_api.md  0020-agent-host-pool-and-orchestrator-placement.md  0021-deployment-topologies-and-supported-scenarios.md  0022-orchestrator-host-and-runtime-daemonization.md  0023-file-attachment-path-resolution-and-authorization.md  0024-attachment-placeholders-and-compaction-invariants.md  0025-kg-entity-normalization-and-dedup.md  0026-truncation-policy-and-contract.md  0027-timeout-policy-and-contract.md  0028-capabilities-plugins-and-library-framework-modes.md  0029-permissive-dependency-and-licensing-policy.md  0030-security-test-fixtures-and-isolation.md  0031-workflow-llm-routing-overrides-provider-model-and-base-url.md  0032-package-dependency-boundaries-and-gateway-first-apps.md  0033-install-profiles-config-entrypoints-and-server-boundaries.md  0034-framework-release-sequence-and-gates.md  0035-capability-routing-defaults.md  0036-artifact-descriptor-contract.md  0037-hosted-file-source-contract-and-workspacepath-authority.md  README.md  memory-recall-levels.md
docs/adr/reorg/: 001_music_as_capability_plugin_via_acestep_api.md  002_abstractmusic_inprocess_local_generation.md  003_abstractmusic_acestep_v15_backend_source_strategy.md  004_smartnote_thin_client_architecture.md  005_smartnote_artifact_first_cards.md  (+3 more)
docs/backlog/: overview.md
docs/claude/: README.md  abstractframework-fit.md  claude-skills-overview.md  claude-skills-sources.md  claude-skills-top-20.md
docs/comparisons/: README.md
docs/guide/: README.md  agent-skills.md  agent-vs-llm.md  apple-local-gateway-flow.md  capability-plugins.md  capability-routing-defaults.md  deployment-iphone.md  deployment-topologies.md  deployment-web.md  email-integration.md  flow-and-kg-memory.md  gateway-security.md  process-manager-env-vars.md  prompt-caching.md  runtime-artifacts.md  runtime-scope.md  scheduled-workflows.md  telegram-integration.md  workflow-bundles.md
docs/installers/: README.md  components.md  implementation-plan.md  install-manifest.json  install-manifest.schema.json  operations-and-support.md  release-and-manifest.md  security-and-os-blocks.md  strategy.md  user-journeys.md
docs/reports/: history-acore.md
docs/scenarios/: README.md  email-inbox-agent.md  gateway-first-local-dev.md  offline-coding-assistant.md  phone-thin-client.md  specialized-agent-flow.md  telegram-permanent-contact.md  workflow-bundle-lifecycle.md
docs/skills/: README.md  abstractframework-agent-skills-fit.md  abstractframework-architecture-deep-dive.md  agent-skills-ecosystem-scan.md  agent-skills-ecosystem-sources.md  claude-agent-skills-overview.md  claude-agent-skills-sources.md  claude-agent-skills-top-20.md
flow/: llms-full.txt  llms.txt
gateway/: llms-full.txt  llms.txt
memory/: llms-full.txt  llms.txt
music/: llms-full.txt  llms.txt
observer/: llms-full.txt  llms.txt
runtime/: llms-full.txt  llms.txt
scripts/: build.sh  clone.sh  commit.sh  gateway-flow-local.sh  gateway-flow.sh  gen_llms_full.py  install.sh  status.sh
semantics/: llms-full.txt  llms.txt
tests/: test_install_profiles.py
vision/: llms-full.txt  llms.txt
voice/: llms-full.txt  llms.txt
(+280 files in other folders)
