[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractframework"
version = "0.1.0"
description = "Unified installer and documentation hub for the AbstractFramework ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
keywords = [
    "agentic-os",
    "ai-agents",
    "llm",
    "autonomous-agents",
    "workflows",
    "multi-agent",
    "durable-execution",
    "knowledge-graph",
    "openai",
    "anthropic",
    "ollama",
    "local-llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Base dependencies (full framework, batteries included)
dependencies = [
    # Core runtime with provider/tool/media/embeddings/server stack enabled.
    "abstractcore[openai,anthropic,huggingface,embeddings,tokens,tools,media,compression,server]==2.11.8",
    "abstractruntime==0.4.2",
    "abstractagent==0.3.1",
    # Flow editor backend + agent nodes.
    "abstractflow[editor]==0.3.7",
    "abstractcode==0.3.6",
    "abstractgateway==0.2.1",
    "abstractmemory==0.0.2",
    "abstractsemantics==0.0.2",
    "abstractvoice==0.6.3",
    "abstractvision==0.2.1",
    "abstractassistant==0.4.2",
]

[project.optional-dependencies]
# Individual components
core = ["abstractcore[openai,anthropic,huggingface,embeddings,tokens,tools,media,compression,server]==2.11.8"]
runtime = ["abstractruntime==0.4.2"]
agent = ["abstractagent==0.3.1"]
flow = ["abstractflow[editor]==0.3.7"]
code = ["abstractcode==0.3.6"]
gateway = ["abstractgateway==0.2.1"]
memory = ["abstractmemory==0.0.2"]
semantics = ["abstractsemantics==0.0.2"]
voice = ["abstractvoice==0.6.3"]
vision = ["abstractvision==0.2.1"]
assistant = ["abstractassistant==0.4.2"]

# Bundles
backend = [
    "abstractcore[openai,anthropic,huggingface,embeddings,tokens,tools,media,compression,server]==2.11.8",
    "abstractruntime==0.4.2",
    "abstractagent==0.3.1",
    "abstractflow[editor]==0.3.7",
    "abstractgateway==0.2.1",
    "abstractmemory==0.0.2",
    "abstractsemantics==0.0.2",
    "abstractvoice==0.6.3",
    "abstractvision==0.2.1",
]

# Full installation (all packages)
all = [
    "abstractcore[openai,anthropic,huggingface,embeddings,tokens,tools,media,compression,server]==2.11.8",
    "abstractruntime==0.4.2",
    "abstractagent==0.3.1",
    "abstractflow[editor]==0.3.7",
    "abstractcode==0.3.6",
    "abstractgateway==0.2.1",
    "abstractmemory==0.0.2",
    "abstractsemantics==0.0.2",
    "abstractvoice==0.6.3",
    "abstractvision==0.2.1",
    "abstractassistant==0.4.2",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lpalbou/AbstractFramework"
Documentation = "https://github.com/lpalbou/AbstractFramework/tree/main/docs"
Repository = "https://github.com/lpalbou/AbstractFramework"
Issues = "https://github.com/lpalbou/AbstractFramework/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
abstractframework = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
