[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractframework"
version = "0.1.4"
description = "Unified installer and documentation hub for the AbstractFramework ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
keywords = [
    "agentic-os",
    "ai-agents",
    "llm",
    "autonomous-agents",
    "workflows",
    "multi-agent",
    "durable-execution",
    "knowledge-graph",
    "openai",
    "anthropic",
    "ollama",
    "local-llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Base dependencies (full framework, batteries included)
dependencies = [
    # Core runtime with provider/tool/media/embeddings/server stack enabled.
    "abstractcore[remote,embeddings,tokens,tools,media,compression,server,vision,voice,audio]==2.13.25",
    "abstractruntime==0.4.21",
    "abstractagent==0.3.7",
    # Flow editor backend + agent nodes.
    "abstractflow[editor]==0.3.13",
    "abstractcode==0.3.6",
    "abstractgateway[server,memory]==0.2.17",
    "abstractmemory[lancedb]==0.2.6",
    "abstractsemantics==0.0.4",
    "abstractvoice==0.10.16",
    "abstractvision==0.3.12",
    "abstractmusic==0.1.11",
    "abstractassistant==0.4.5",
]

[project.optional-dependencies]
# Individual components
core = ["abstractcore[remote,embeddings,tokens,tools,media,compression,server,vision,voice,audio]==2.13.25"]
runtime = ["abstractruntime==0.4.21"]
agent = ["abstractagent==0.3.7"]
flow = ["abstractflow[editor]==0.3.13"]
code = ["abstractcode==0.3.6"]
gateway = ["abstractgateway[server,memory]==0.2.17"]
memory = ["abstractmemory[lancedb]==0.2.6"]
semantics = ["abstractsemantics==0.0.4"]
voice = ["abstractvoice==0.10.16"]
vision = ["abstractvision==0.3.12"]
music = ["abstractmusic==0.1.11"]
assistant = ["abstractassistant==0.4.5"]

# Bundles
backend = [
    "abstractcore[remote,embeddings,tokens,tools,media,compression,server,vision,voice,audio]==2.13.25",
    "abstractruntime==0.4.21",
    "abstractagent==0.3.7",
    "abstractflow[editor]==0.3.13",
    "abstractgateway[server,memory]==0.2.17",
    "abstractmemory[lancedb]==0.2.6",
    "abstractsemantics==0.0.4",
    "abstractvoice==0.10.16",
    "abstractvision==0.3.12",
    "abstractmusic==0.1.11",
]

# Full installation (all packages)
all = [
    "abstractcore[remote,embeddings,tokens,tools,media,compression,server,vision,voice,audio]==2.13.25",
    "abstractruntime==0.4.21",
    "abstractagent==0.3.7",
    "abstractflow[editor]==0.3.13",
    "abstractcode==0.3.6",
    "abstractgateway[server,memory]==0.2.17",
    "abstractmemory[lancedb]==0.2.6",
    "abstractsemantics==0.0.4",
    "abstractvoice==0.10.16",
    "abstractvision==0.3.12",
    "abstractmusic==0.1.11",
    "abstractassistant==0.4.5",
]

# Native macOS Python installs. These are intentionally not Docker profiles:
# MLX/Metal-backed engines run on the host Apple runtime.
apple = [
    "abstractgateway[apple]==0.2.17",
]

gpu = [
    "abstractgateway[gpu]==0.2.17",
]

all-apple = [
    "abstractcore[all-apple]==2.13.25",
    "abstractruntime[all-apple]==0.4.21",
    "abstractagent[all-apple]==0.3.7",
    "abstractflow[apple]==0.3.13",
    "abstractcode==0.3.6",
    "abstractgateway[all-apple]==0.2.17",
    "abstractmemory[all-apple]==0.2.6",
    "abstractsemantics[all-apple]==0.0.4",
    "abstractvoice[all-apple]==0.10.16",
    "abstractvision[all-apple]==0.3.12",
    "abstractmusic[all-apple]==0.1.11",
    "abstractassistant==0.4.5",
]

all-gpu = [
    "abstractcore[all-gpu]==2.13.25",
    "abstractruntime[all-gpu]==0.4.21",
    "abstractagent[all-gpu]==0.3.7",
    "abstractflow[gpu]==0.3.13",
    "abstractcode==0.3.6",
    "abstractgateway[all-gpu]==0.2.17",
    "abstractmemory[all-gpu]==0.2.6",
    "abstractsemantics[all-gpu]==0.0.4",
    "abstractvoice[all-gpu]==0.10.16",
    "abstractvision[all-gpu]==0.3.12",
    "abstractmusic[all-gpu]==0.1.11",
    "abstractassistant==0.4.5",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lpalbou/AbstractFramework"
Documentation = "https://github.com/lpalbou/AbstractFramework/tree/main/docs"
Repository = "https://github.com/lpalbou/AbstractFramework"
Issues = "https://github.com/lpalbou/AbstractFramework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["abstractframework*"]

[tool.setuptools.package-data]
abstractframework = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
