[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractframework"
version = "0.1.10"
description = "Unified installer and documentation hub for the AbstractFramework ecosystem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
keywords = [
    "agentic-os",
    "ai-agents",
    "llm",
    "autonomous-agents",
    "workflows",
    "multi-agent",
    "durable-execution",
    "knowledge-graph",
    "openai",
    "anthropic",
    "ollama",
    "local-llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Base dependencies (remote-first, lightweight).
#
# Design constraints:
# - `pip install abstractframework` should default to *remote inference* (no MLX/vLLM/Diffusers local engine stacks).
# - Hardware-local stacks are opt-in via `abstractframework[apple]` and `abstractframework[gpu]`.
# - Keep the meta-package aligned with the real per-package profiles (especially `abstractgateway`).
dependencies = [
    # Durable Gateway control plane (remote-light by default).
    "abstractgateway==0.2.28",

    # Workflow authoring UI is distributed through npm as @abstractframework/flow.
    "abstractcode==0.3.9",
    "abstractassistant==0.4.10",

    # Pin the core Python stack for release determinism (also pulled transitively).
    "abstractcore==2.13.38",
    "AbstractRuntime==0.4.29",
    "abstractagent==0.3.12",
    "AbstractMemory==0.2.6",
    "abstractsemantics==0.0.4",

    # Capability plugins are remote-first by default; local runtimes live behind
    # their package-specific `apple`/`gpu` (or `all-*`) extras.
    "abstractvoice==0.10.18",
    "abstractvision==0.3.26",
    "abstractmusic==0.1.13",
]

[project.optional-dependencies]
# NOTE: Extras here are additive. The base install already pins and installs the
# full Python ecosystem; `apple`/`gpu` select hardware-local stacks and upgrade
# apps to their matching profiles.
#
# AbstractObserver is distributed as an npm package (`npx @abstractframework/observer`),
# so it is not installable via pip extras.

# Native macOS Python installs. These are intentionally not Docker profiles:
# MLX/Metal-backed engines run on the host Apple runtime. This profile upgrades
# the stack by selecting the hardware-local dependency aggregates (owned by Gateway),
# then adds user-facing apps.
apple = [
    "abstractgateway[apple]==0.2.28",
    "abstractassistant[apple]==0.4.10; platform_system == \"Darwin\"",
]

gpu = [
    "abstractgateway[gpu]==0.2.28",
    "abstractassistant[gpu]==0.4.10",
]

[project.urls]
Homepage = "https://github.com/lpalbou/AbstractFramework"
Documentation = "https://github.com/lpalbou/AbstractFramework/tree/main/docs"
Repository = "https://github.com/lpalbou/AbstractFramework"
Issues = "https://github.com/lpalbou/AbstractFramework/issues"

[project.scripts]
abstractframework = "abstractframework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["abstractframework*"]

[tool.setuptools.package-data]
abstractframework = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
